--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  box-sizing: border-box;
+  background-color: aquamarine;
 }
 
 .App-logo {
@@ -30,4 +32,36 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.allMembers{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.member{
+  margin:40px 5px 10px;
+  padding: 1rem;
+  background-color: white;
+  border-radius: 4px;
+}
+
+form{
+  display: flex;
+  /* flex-flow:  wrap; */
+  align-items: center;
+}
+
+input, textarea {
+  width: 200px;
+  padding: 15px 22px;
+  margin: 10px 10px 10px 0px;
+  box-sizing: border-box;  
+  border: none;
+  border-radius: 4px;
+}
+
+label{
+  margin-right: 10px;
 }
